force-app/main/default/objects/Autopilot_Email_Result__c/Autopilot_Email_Result__c.object-meta.xml
<CustomObject>
    <description>Email result sent from Autopilot, related to Contact</description>
    <label>Autopilot Email Result</label>
    <nameField>
        <label>Autopilot Email Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Autopilot Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>