force-app/main/default/objects/Autopilot_Email_Result__c/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The mail has been bounced.</description>
    <inlineHelpText>The mail has been bounced.</inlineHelpText>
    <label>Bounced</label>
    <type>Checkbox</type>
</CustomField>