force-app/main/default/objects/Autopilot_Email_Result__c/fields/Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Date__c</fullName>
    <description>Date and time when the mail has been bounced.</description>
    <inlineHelpText>Date and time when the mail has been bounced.</inlineHelpText>
    <label>Bounced Date</label>
    <type>DateTime</type>
</CustomField>