force-app/main/default/objects/Autopilot_Email_Result__c/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The mail has been clicked.</description>
    <inlineHelpText>The mail has been clicked.</inlineHelpText>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>