force-app/main/default/objects/Autopilot_Email_Result__c/fields/Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Date__c</fullName>
    <description>Date and time when the mail has been clicked.</description>
    <inlineHelpText>Date and time when the mail has been clicked.</inlineHelpText>
    <label>Clicked Date</label>
    <type>DateTime</type>
</CustomField>