force-app/main/default/objects/Autopilot_Email_Result__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Autopilot Email Results</relationshipLabel>
    <relationshipName>Autopilot_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>