force-app/main/default/objects/Autopilot_Email_Result__c/fields/Deferred__c.field-meta.xml
<CustomField>
    <fullName>Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deferred</label>
    <type>Checkbox</type>
</CustomField>