force-app/main/default/objects/Autopilot_Email_Result__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address the mail has been sent to</description>
    <inlineHelpText>Email address the mail has been sent to</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>