force-app/main/default/objects/Autopilot_Email_Result__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>90</length>
    <type>Text</type>
</CustomField>