force-app/main/default/objects/Autopilot_Email_Result__c/fields/Ingest_Time__c.field-meta.xml
<CustomField>
    <fullName>Ingest_Time__c</fullName>
    <label>Ingest Time</label>
    <type>DateTime</type>
</CustomField>