force-app/main/default/objects/Autopilot_Email_Result__c/fields/Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>Journey_Name__c</fullName>
    <label>Journey Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>