force-app/main/default/objects/Autopilot_Email_Result__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Autopilot Email Results</relationshipLabel>
    <relationshipName>Autopilot_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>