force-app/main/default/objects/Autopilot_Email_Result__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The sent email has been opened.</description>
    <inlineHelpText>The sent email has been opened.</inlineHelpText>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>