force-app/main/default/objects/Autopilot_Email_Result__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <description>Date and time when the mail has been opened.</description>
    <inlineHelpText>Date and time when the mail has been opened.</inlineHelpText>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>