force-app/main/default/objects/Autopilot_Email_Result__c/fields/Replied__c.field-meta.xml
<CustomField>
    <fullName>Replied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replied</label>
    <type>Checkbox</type>
</CustomField>