force-app/main/default/objects/Autopilot_Email_Result__c/fields/StreamId__c.field-meta.xml
<CustomField>
    <fullName>StreamId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autopilot Stream</label>
    <referenceTo>Autopilot_Stream__c</referenceTo>
    <relationshipLabel>Autopilot Email Results</relationshipLabel>
    <relationshipName>Autopilot_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>