force-app/main/default/objects/Autopilot_Email_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StreamId__c</columns>
    <columns>Sent__c</columns>
    <columns>Clicked__c</columns>
    <columns>Opened__c</columns>
    <columns>Bounced__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>Ingest_Time__c</columns>
    <columns>Journey_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>